--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ uvicorn = "^0.24.0.post1"
 python-multipart = "^0.0.6"
 sqlalchemy = "^2.0.23"
 pyjwt = "^2.8.0"
-alembic = "^1.12.1"
+alembic = "^1.13.0"
 psycopg2-binary = "^2.9.9"
-bcrypt = "^4.0.1"
-
+bcrypt = "^4.1.1"
+python-jose = { extras = ["cryptography"], version = "^3.3.0" }
+python-dotenv = "^1.0.0"
+pydantic-settings = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
